# csv2docx

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docx-csv-mailmerge.py  example.docx  mypy.ini  noxfile.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
csv2docx/: cli.py  csv2docx.py
src/: cli.py  csv2docx.py
src/csv2docx/: cli.py  csv2docx.py
tests/: conftest.py  test_cli.py  test_module.py
tests/data/: example.csv  example_emptyrow.csv  example_missing_column.csv
