[tool.poetry]
name = "csv2docx"
version = "0.0.1"
description = "Generates .docx files from .csv files using a .docx template with mailmerge fields."
authors = ["David Verweij <davidverweij@gmail.com>", "Jay Rainey <hi@jawrainey.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davidverweij/csv2docx"
repository = "https://github.com/davidverweij/csv2docx"

[tool.poetry.dependencies]
python = "^3.8.0"
docx-mailmerge = "^0.5.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
convert = "csv2docx.cli:convert"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
